--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^3.26.5",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
