--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "antd": "^3.26.5",
+    "apexcharts": "^3.15.2",
     "axios": "^0.19.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "js-cookie": "^2.2.1",
+    "jsdom": "^16.0.0",
     "jsonwebtoken": "^8.5.1",
     "next": "9.1.6",
     "react": "16.12.0",
+    "react-apexcharts": "^1.3.6",
     "react-dom": "16.12.0",
     "react-redux": "^7.1.3",
     "reactstrap": "^8.2.0",
