--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "axios": "^0.19.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "js-cookie": "^2.2.1",
     "jsdom": "^16.0.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.8.9",
     "next": "9.1.6",
     "react": "16.12.0",
     "react-apexcharts": "^1.3.6",
