--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2",
+    "win-node-env": "^0.4.0"
   }
 }
