--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
+    "core-js": "^3.6.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -24,6 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.9",
     "next": "9.1.6",
+    "prop-types": "^15.7.2",
     "react": "16.12.0",
     "react-apexcharts": "^1.3.6",
     "react-dom": "16.12.0",
@@ -33,7 +35,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "styled-jsx": "^3.2.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.2",
