--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^3.26.5",
     "apexcharts": "^3.15.2",
     "axios": "^0.19.1",
+    "axios-hooks": "^1.9.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "core-js": "^3.6.4",
