--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "server": "nodemon ./backend/centerAPI.js",
     "dev": "NODE_ENV=development nodemon ./server.js",
     "build": "next build",
-    "deploy": "next build && next export",
+    "export": "next export",
+    "deploy": "npm run build && npm run export",
     "start": "next start",
     "product": "npm run build && NODE_ENV=production nodemon ./server.js"
   },
