--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "styled-jsx": "^3.2.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2",
-    "win-node-env": "^0.4.0"
+    "nodemon": "^2.0.2"
   }
 }
