--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "socket.io": "^2.3.0",
-    "styled-jsx": "^3.2.4"
+    "styled-jsx": "^3.2.4",
+    "win-node-env": "^0.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
